--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "node app"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "express": "3.3.x",
     "jade": "0.34.x",
-    "line-reader": "0.2.x"
+    "line-reader": "0.2.x",
+    "mongodb": "1.3.x",
+    "passport": "0.1.x",
+    "passport-local": "0.1.x",
+    "redis": "0.8.x"
   }
 }
