--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "0.1.x",
     "express": "3.3.x",
     "jade": "0.34.x",
     "line-reader": "0.2.x",
