--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "connect-flash": "0.1.x",
+    "d3": "3.3.x",
     "express": "3.3.x",
     "jade": "0.34.x",
     "line-reader": "0.2.x",
     "mongodb": "1.3.x",
     "passport": "0.1.x",
     "passport-local": "0.1.x",
-    "redis": "0.8.x"
+    "redis": "0.8.x",
+    "underscore": "1.5.x"
   }
 }
