--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "3.3.x",
     "jade": "0.34.x",
     "line-reader": "0.2.x",
+    "markdown": "0.5.x",
     "mongodb": "1.3.x",
     "passport": "0.1.x",
     "passport-local": "0.1.x",
